# escli.py

./: DEPENDENCIES.md  LICENSE.md  MANIFEST.in  NOTICE.md  README.md  requirements.txt  setup.cfg  setup.py
data/: doctors.csv  doctors.ndjson
escli/: VERSION  __init__.py  __main__.py  elastic.py  io.py  output.py  reader.py  version.py  writer.py
escli/commands/: __init__.py  formats.py  indexes.py  info.py  ingest.py  jsonify.py  search.py  version.py
escli/services/: __init__.py  elasticsearch.py  enterprisesearch.py  serverless.py
