[metadata]
name = escli
url = https://github.com/technige/escli
license = Apache-2.0
author = Nigel Small
author_email = nigel.small@elastic.co
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
    elasticsearch
    tabulate
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    escli = escli.__main__:main

[bdist_wheel]
universal = 1
