[metadata]
name = escli
url = https://github.com/technige/escli
license = Apache-2.0
author = Nigel Small
author_email = nigel.small@elastic.co
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
install_requires =
    elasticsearch
    elasticsearch-serverless
    elastic_enterprise_search
    tabulate
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    escli = escli.__main__:main
    escli.a = escli.__main__:main_app_search
    escli.s = escli.__main__:main_serverless

[bdist_wheel]
universal = 1
